Crash when connecting nodes with to node group input or output #49082

Closed
opened 2016-08-13 05:16:06 +02:00 by Tim Roberts · 6 comments

System information:
Windows 10 Home 64 bit
4GB Ram CPU

Blender version
2.77a abf6f08 and 2.77.3 c19d527

Description of Error:
If connecting a node to a group input or output (inside of a node group) by using'Shift + F' keys instead of 'lazy connect, Blender crashes.

Steps to reproduce error

Create a node group, connect any node to the input or output using 'Shift + F'.

Steps to reproduce error based on file

File is attached, connect diffuse shader to node group input or output with 'Shift+F', behavior will present itself.

Report.blend

**System information:** Windows 10 Home 64 bit 4GB Ram CPU **Blender version** 2.77a abf6f08 and 2.77.3 c19d527 **Description of Error:** If connecting a node to a group input or output (inside of a node group) by using'Shift + F' keys instead of 'lazy connect, Blender crashes. **Steps to reproduce error** Create a node group, connect any node to the input or output using 'Shift + F'. **Steps to reproduce error based on file** File is attached, connect diffuse shader to node group input or output with 'Shift+F', behavior will present itself. [Report.blend](https://archive.blender.org/developer/F336399/Report.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Timaroberts

Added subscriber: @Timaroberts

Added subscriber: @mont29

Added subscriber: @mont29

Issue confirmed, asan report:

=================================================================
==3649==ERROR: AddressSanitizer: heap-use-after-free on address 0x6060007538f8 at pc 0x0000023eba4c bp 0x7ffc1f344c10 sp 0x7ffc1f344c08
READ of size 4 at 0x6060007538f8 thread T0
    - 0 0x23eba4b in snode_autoconnect_input /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_relationships.c:291
    - 1 0x23ebf1c in snode_autoconnect /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_relationships.c:346
    - 2 0x23efe2b in node_make_link_exec /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_relationships.c:906
    - 3 0x224f5c0 in wm_operator_invoke /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:1102
    - 4 0x2252ac3 in wm_handler_operator_call /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:1744
    - 5 0x2254250 in wm_handlers_do_intern /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:2021
    - 6 0x2254a51 in wm_handlers_do /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:2130
    - 7 0x22567e6 in wm_event_do_handlers /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:2463
    - 8 0x223922d in WM_main /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm.c:489
    - 9 0x222f753 in main /home/i74700deb64/blender/__work__/src/source/creator/creator.c:525
    - 10 0x7f7f9be5672f in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x2072f)
    - 11 0x222eaf8 in _start (/home/i74700deb64/blender/__work__/build_cmake_dbg/bin/blender+0x222eaf8)

0x6060007538f8 is located 56 bytes inside of 64-byte region [0x6060007538c0,0x606000753900)
freed by thread T0 here:
    - 0 0x7f7fab4aec72 in __interceptor_free (/usr/lib/x86_64-linux-gnu/libasan.so.2+0x93c72)
    - 1 0x5220898 in MEM_lockfree_freeN /home/i74700deb64/blender/__work__/src/intern/guardedalloc/intern/mallocn_lockfree_impl.c:169
    - 2 0x440326d in nodeRemLink /home/i74700deb64/blender/__work__/src/source/blender/blenkernel/intern/node.c:1020
    - 3 0x473f556 in node_group_input_update /home/i74700deb64/blender/__work__/src/source/blender/nodes/intern/node_common.c:437
    - 4 0x440ff06 in ntreeUpdateTree /home/i74700deb64/blender/__work__/src/source/blender/blenkernel/intern/node.c:3025
    - 5 0x23eba18 in snode_autoconnect_input /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_relationships.c:290
    - 6 0x23ebf1c in snode_autoconnect /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_relationships.c:346
    - 7 0x23efe2b in node_make_link_exec /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_relationships.c:906
    - 8 0x224f5c0 in wm_operator_invoke /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:1102
    - 9 0x2252ac3 in wm_handler_operator_call /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:1744
    - 10 0x2254250 in wm_handlers_do_intern /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:2021
    - 11 0x2254a51 in wm_handlers_do /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:2130
    - 12 0x22567e6 in wm_event_do_handlers /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:2463
    - 13 0x223922d in WM_main /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm.c:489
    - 14 0x222f753 in main /home/i74700deb64/blender/__work__/src/source/creator/creator.c:525
    - 15 0x7f7f9be5672f in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x2072f)

previously allocated by thread T0 here:
    - 0 0x7f7fab4af0d2 in __interceptor_calloc (/usr/lib/x86_64-linux-gnu/libasan.so.2+0x940d2)
    - 1 0x5220d9e in MEM_lockfree_callocN /home/i74700deb64/blender/__work__/src/intern/guardedalloc/intern/mallocn_lockfree_impl.c:286
    - 2 0x4402e8a in nodeAddLink /home/i74700deb64/blender/__work__/src/source/blender/blenkernel/intern/node.c:987
    - 3 0x23eb9d7 in snode_autoconnect_input /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_relationships.c:288
    - 4 0x23ebf1c in snode_autoconnect /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_relationships.c:346
    - 5 0x23efe2b in node_make_link_exec /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_relationships.c:906
    - 6 0x224f5c0 in wm_operator_invoke /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:1102
    - 7 0x2252ac3 in wm_handler_operator_call /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:1744
    - 8 0x2254250 in wm_handlers_do_intern /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:2021
    - 9 0x2254a51 in wm_handlers_do /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:2130
    - 10 0x22567e6 in wm_event_do_handlers /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:2463
    - 11 0x223922d in WM_main /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm.c:489
    - 12 0x222f753 in main /home/i74700deb64/blender/__work__/src/source/creator/creator.c:525
    - 13 0x7f7f9be5672f in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x2072f)
Issue confirmed, asan report: ``` ================================================================= ==3649==ERROR: AddressSanitizer: heap-use-after-free on address 0x6060007538f8 at pc 0x0000023eba4c bp 0x7ffc1f344c10 sp 0x7ffc1f344c08 READ of size 4 at 0x6060007538f8 thread T0 - 0 0x23eba4b in snode_autoconnect_input /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_relationships.c:291 - 1 0x23ebf1c in snode_autoconnect /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_relationships.c:346 - 2 0x23efe2b in node_make_link_exec /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_relationships.c:906 - 3 0x224f5c0 in wm_operator_invoke /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:1102 - 4 0x2252ac3 in wm_handler_operator_call /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:1744 - 5 0x2254250 in wm_handlers_do_intern /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:2021 - 6 0x2254a51 in wm_handlers_do /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:2130 - 7 0x22567e6 in wm_event_do_handlers /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:2463 - 8 0x223922d in WM_main /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm.c:489 - 9 0x222f753 in main /home/i74700deb64/blender/__work__/src/source/creator/creator.c:525 - 10 0x7f7f9be5672f in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x2072f) - 11 0x222eaf8 in _start (/home/i74700deb64/blender/__work__/build_cmake_dbg/bin/blender+0x222eaf8) 0x6060007538f8 is located 56 bytes inside of 64-byte region [0x6060007538c0,0x606000753900) freed by thread T0 here: - 0 0x7f7fab4aec72 in __interceptor_free (/usr/lib/x86_64-linux-gnu/libasan.so.2+0x93c72) - 1 0x5220898 in MEM_lockfree_freeN /home/i74700deb64/blender/__work__/src/intern/guardedalloc/intern/mallocn_lockfree_impl.c:169 - 2 0x440326d in nodeRemLink /home/i74700deb64/blender/__work__/src/source/blender/blenkernel/intern/node.c:1020 - 3 0x473f556 in node_group_input_update /home/i74700deb64/blender/__work__/src/source/blender/nodes/intern/node_common.c:437 - 4 0x440ff06 in ntreeUpdateTree /home/i74700deb64/blender/__work__/src/source/blender/blenkernel/intern/node.c:3025 - 5 0x23eba18 in snode_autoconnect_input /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_relationships.c:290 - 6 0x23ebf1c in snode_autoconnect /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_relationships.c:346 - 7 0x23efe2b in node_make_link_exec /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_relationships.c:906 - 8 0x224f5c0 in wm_operator_invoke /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:1102 - 9 0x2252ac3 in wm_handler_operator_call /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:1744 - 10 0x2254250 in wm_handlers_do_intern /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:2021 - 11 0x2254a51 in wm_handlers_do /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:2130 - 12 0x22567e6 in wm_event_do_handlers /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:2463 - 13 0x223922d in WM_main /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm.c:489 - 14 0x222f753 in main /home/i74700deb64/blender/__work__/src/source/creator/creator.c:525 - 15 0x7f7f9be5672f in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x2072f) previously allocated by thread T0 here: - 0 0x7f7fab4af0d2 in __interceptor_calloc (/usr/lib/x86_64-linux-gnu/libasan.so.2+0x940d2) - 1 0x5220d9e in MEM_lockfree_callocN /home/i74700deb64/blender/__work__/src/intern/guardedalloc/intern/mallocn_lockfree_impl.c:286 - 2 0x4402e8a in nodeAddLink /home/i74700deb64/blender/__work__/src/source/blender/blenkernel/intern/node.c:987 - 3 0x23eb9d7 in snode_autoconnect_input /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_relationships.c:288 - 4 0x23ebf1c in snode_autoconnect /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_relationships.c:346 - 5 0x23efe2b in node_make_link_exec /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_relationships.c:906 - 6 0x224f5c0 in wm_operator_invoke /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:1102 - 7 0x2252ac3 in wm_handler_operator_call /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:1744 - 8 0x2254250 in wm_handlers_do_intern /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:2021 - 9 0x2254a51 in wm_handlers_do /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:2130 - 10 0x22567e6 in wm_event_do_handlers /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:2463 - 11 0x223922d in WM_main /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm.c:489 - 12 0x222f753 in main /home/i74700deb64/blender/__work__/src/source/creator/creator.c:525 - 13 0x7f7f9be5672f in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x2072f) ```

This issue was referenced by c395d044fc

This issue was referenced by c395d044fcce02321f1689b8b025369fb2dbd6a6
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49082
No description provided.